FEAT: Métodos del servicio de estadísticas funcionales